[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/entities/base_body/base_body.gd" type="Script" id=1]
[ext_resource path="res://src/material/whiten_material.tres" type="Material" id=2]
[ext_resource path="res://src/attacks/DOT/bleed/bleed.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/effects/HitParticles.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/entities/stats_system/stats_system.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=20]
resource_name = "dead"

[sub_resource type="Animation" id=25]
resource_name = "take_hit"

[node name="base_body" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="STATS" parent="." instance=ExtResource( 5 )]

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 2 )

[node name="RayCast" type="RayCast2D" parent="."]
cast_to = Vector2( 15, 0 )
collision_mask = 0

[node name="Weapon_slot" type="Node2D" parent="RayCast"]

[node name="Off_wepon_slot" type="Node2D" parent="."]
show_behind_parent = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 20 )
anims/take_hit = SubResource( 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]

[node name="Regen_timer" type="Timer" parent="."]
autostart = true

[node name="Helth_bar" type="ProgressBar" parent="."]
margin_left = -15.0
margin_top = -27.0
margin_right = 135.0
margin_bottom = -12.0
rect_scale = Vector2( 0.2, 0.2 )

[node name="effect_list" type="Node2D" parent="."]

[node name="bleed" parent="effect_list" instance=ExtResource( 3 )]
one_tick = 0.5

[node name="HitParticles" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 0 )

[node name="Passive_list" type="Node" parent="."]

[node name="Ability_list" type="Node" parent="."]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Regen_timer" to="." method="_on_Regen_timer_timeout"]
